# rax

./: .gitignore  AGENTS.md
.github/workflows/: model-invoker.yml
.properties.rax/: MAIN.md
.properties.rax/properties/: README.md
ExecutionRuntime/agent-assembler/: README.md  go.mod
ExecutionRuntime/agent-definition/: README.md  go.mod  service.go  service_test.go
ExecutionRuntime/agent-host/: README.md  go.mod  go.sum
ExecutionRuntime/application/: README.md  agent_activation_coordinator_v2.go  checkpoint_coordinator_v1.go  (+30 more)
ExecutionRuntime/sandbox/dataplane/: Cargo.toml  README.md  rust-toolchain.toml
ExecutionRuntime/sandbox/dataplane/deploy/: config.example.json  praxis-sandbox-dataplane.service
ExecutionRuntime/sandbox/dataplane/src/: checkpoint.rs  containerd.rs  contract.rs  enforcer.rs  error.rs  host.rs  ipc.rs  journal.rs  lib.rs  microvm.rs  provider.rs  remote.rs  remote_ipc.rs  wasm.rs  wasm_capability_ipc.rs  workspace_commit.rs
ExecutionRuntime/sandbox/dataplane/tests/: checkpoint_store.rs  containerd_backend.rs  enforcer_fault.rs  host_backend.rs  ipc_current.rs  journal_recovery.rs  microvm_backend.rs  protocol_golden.rs  provider_result.rs  remote_connector_ipc.rs  remote_provider.rs  wasm_capability_ipc.rs  wasmtime_backend.rs  workspace_commit.rs
ExecutionRuntime/sandbox/dataplane/tests/common/: mod.rs
ExecutionRuntime/sandbox/dataplane/wit/: praxis-sandbox-capability.wit
Praxis白皮书/: Praxis白皮书总纲.md
tmp.document/: Context&Cache.md  Continuity.md  Harness接线.md  Memory&Knowledge.md  Review.md  Sandbox.md  Tool&MCP.md  上下文-运行时.md
(+3433 files in other folders)
