[package]
name = "praxis-sandbox-dataplane"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "Apache-2.0"

[lib]
name = "praxis_sandbox_dataplane"
path = "src/lib.rs"

[[bin]]
name = "praxis-sandbox-dataplane"
path = "src/bin/praxis-sandbox-dataplane.rs"

[dependencies]
async-trait = "0.1.89"
containerd-client = "0.9.0"
hex = "0.4.3"
nix = { version = "0.30.1", features = ["process", "signal", "socket", "user"] }
prost-types = "0.14.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tonic = "0.14.6"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
wasmtime = { version = "41.0.4", default-features = false, features = ["component-model", "cranelift", "pooling-allocator", "runtime", "std", "wat"] }

[dev-dependencies]
tempfile = "3.23.0"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
assigning_clones = "allow"
missing_errors_doc = "allow"
needless_pass_by_value = "allow"
unwrap_used = "deny"
expect_used = "deny"
